--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jagrit-portfolio-enhanced",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://JagritKejriwal.github.io/jagrit-portfolio-enhanced",
+  "homepage": "https://jagrit05.github.io/",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
