--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "jagrit-portfolio-enhanced",
   "version": "1.0.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1"
   },
+  "homepage":"https://jagrit05.github.io",
   "devDependencies": {
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.5",
